# simple-debian-package

./: LICENSE  pyproject.toml
src/simple_debian_package/: __init__.py
